added a div for user profile

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
             <button id="searchBtn" class="btn btn-success">Search</button>
         </div>
+        <br>
+        <div id="profile"></div>
     </div>
     <footer class="mt-5 p-3 text-center bg-light"> GitHub Finder &copy;</footer>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
