corrected name of a js file

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div id="profile"></div>
     </div>
     <footer class="mt-5 p-3 text-center bg-light"> GitHub Finder &copy;</footer>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-    <script src="JS/ui.js"></script>
+        crossorigin="anonymous"></script> -->
+    <script src="JS/userProfile.js"></script>
     <script src="JS/script.js"></script>
 </body>
 
